@@ -1,3 +1,5 @@
+- Add ActiveScaffold.reload_embedded JS method, to reload an embedded scaffold
+
 = 3.4.31
 - fix multiple support for :select form_ui with non-association columns
 - remove yaml response support, not used in rails usually and no support for respond_to :yaml
